--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/client": "6.22.4",
     "@sanity/icons": "3.4.0",
     "@sanity/image-url": "1.1.0",
+    "@sanity/structure": "^2.36.2",
     "@sanity/vision": "3.64.1",
     "@sanity/visual-editing": "2.7.0",
     "@sanity/webhook": "4.0.4",
@@ -34,7 +35,7 @@
     "react-icons": "^5.4.0",
     "sanity": "3.64.1",
     "sanity-plugin-asset-source-unsplash": "3.0.1",
-    "sanity-plugin-iframe-pane": "3.1.6",
+    "sanity-plugin-iframe-pane": "^3.1.6",
     "styled-components": "6.1.13",
     "swr": "2.2.5"
   },
